# feelpp-kokkos

./: .gitignore  .travis.yml  CMakeLists.txt  README.adoc  README.md  configure  minimal.cpp
fluid/: CMakeLists.txt  README.md
fluid/navierstokes/: CMakeLists.txt  README.md  qs_ns.cpp
fluid/navierstokes/cavity/: blockns_lu.cfg  cavity_2d.bc  cavity_2d.cfg  cavity_2d.geo  cavity_3d.bc  cavity_3d.cfg  cavity_3d.geo
fluid/navierstokes/feelpp/: feelpp_2d.bc  feelpp_2d.cfg
fluid/navierstokes/step/: README.md  blockns_gasm.cfg  step_2d.cfg  step_3d.cfg
fluid/navierstokes/turek/: turek-2d.bc  turek-2d.cfg  turek-2d.feelpp  turek.geo
fluid/stokes/: CMakeLists.txt  README.md  qs_fm.cpp  qs_stokes.cfg  qs_stokes.cpp  qs_stokes.json
fluid/stokes/poiseuille/: poiseuille.geo  poiseuille2d.cfg  poiseuille2d.json  poiseuille3d.cfg  poiseuille3d.json
laplacian/: CMakeLists.txt  README.md  aniso_laplacian.cpp  circle.geo  ls_laplacian.cpp  qs_laplacian.cfg  qs_laplacian.cpp  qs_laplacian_2d.cfg  qs_laplacian_3d.cfg
laplacian/model1/: CMakeLists.txt  aniso.cfg  aniso.geo  concrete.json  model.mod
solid/: CMakeLists.txt  README.md  qs_sm.cpp
solid/beam/: beam2d.cfg  beam2d.json  beam3d.bc  beam3d.cfg  beam3d.geo  beam3d.json
solid/cantilever/: cantilever.cfg  cantilever.json
solid/linear_elasticity/: CMakeLists.txt  qs_le.cfg  qs_le.cpp
solid/linear_elasticity/beam/: beam2d.bc  beam2d.cfg  beam2d.geo
solid/linear_elasticity/cantilever/: cantilever.bc  cantilever.cfg  cantilever.geo
solid/linear_elasticity/tripod/: tripod.bc
solid/stvenantkirchhoff/: CMakeLists.txt  qs_stvenant_kirchhoff.cpp
solid/stvenantkirchhoff/beam/: beam2d.bc  beam2d.cfg  beam2d.geo
solid/tripod/: tripod.cfg  tripod.geo  tripod.json
